JumpScript/tests/baselines/reference/parserModuleDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration1.jump(1,8): error TS1035: Only ambient modules can use quoted names.


==== tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration1.jump (1 errors) ====
    module "Foo" {
           ~~~~~
!!! error TS1035: Only ambient modules can use quoted names.
    }